--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dominate==2.8.0
 Flask==2.3.2
 Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.6
+Flask-Gravatar==0.5.0
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
