--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-gunicorn==20.1.0
 blinker==1.6.2
 click==8.1.3
+dnspython==2.3.0
 dominate==2.8.0
+email-validator==2.0.0.post2
 Flask==2.3.2
 Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.6
@@ -10,6 +11,9 @@ Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==20.1.0
+idna==3.4
+is-disposable-email==1.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
@@ -18,3 +22,4 @@ typing_extensions==4.7.1
 visitor==0.1.3
 Werkzeug==2.3.6
 WTForms==3.0.1
+wtforms-validators==1.0.0
